feat: TripAdvisorのボタンを表示できるように修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,7 +95,7 @@
     <%# フッター %>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container text-center text-muted">
-        <small>&copy; <%= Time.current.year %> KuchikomiElevator. All rights reserved.</small>
+        <small>&copy; <%= Time.current.year %> ViralVerse. All rights reserved.</small>
       </div>
     </footer>
 
