--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -7,16 +7,26 @@
      <h5 class="mb-0">お店の管理</h5>
    </div>
    <div class="card-body">
-     <div class="d-flex flex-column">
-       <%= link_to @shop.url, target: "_blank", class: "text-primary text-decoration-none d-flex justify-content-between align-items-center p-2 border-bottom" do %>
-         google口コミページ
-         <i class="bi bi-box-arrow-up-right"></i>
-       <% end %>
-       <%= link_to edit_shop_path(@shop), class: "text-primary text-decoration-none d-flex justify-content-between align-items-center p-2" do %>
-         お店修正ページ
-         <i class="bi bi-pencil"></i>
-       <% end %>
-     </div>
+    <div class="d-flex flex-column">
+      <% if @shop.url.present? %>
+        <%= link_to @shop.url, target: "_blank", class: "text-primary text-decoration-none d-flex justify-content-between align-items-center p-2 border-bottom" do %>
+          google口コミページ
+          <i class="bi bi-box-arrow-up-right"></i>
+        <% end %>
+      <% end %>
+
+      <% if @shop.url_tripadvisor.present? %>
+        <%= link_to @shop.url_tripadvisor, target: "_blank", class: "text-primary text-decoration-none d-flex justify-content-between align-items-center p-2 border-bottom" do %>
+          TripAdvisor口コミページ
+          <i class="bi bi-box-arrow-up-right"></i>
+        <% end %>
+      <% end %>
+
+      <%= link_to edit_shop_path(@shop), class: "text-primary text-decoration-none d-flex justify-content-between align-items-center p-2" do %>
+        お店修正ページ
+        <i class="bi bi-pencil"></i>
+      <% end %>
+    </div>
    </div>
  </div>
 
