--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -10,7 +10,7 @@
     <div class="d-flex flex-column">
       <% if @shop.url.present? %>
         <%= link_to @shop.url, target: "_blank", class: "text-primary text-decoration-none d-flex justify-content-between align-items-center p-2 border-bottom" do %>
-          google口コミページ
+          Google口コミページ
           <i class="bi bi-box-arrow-up-right"></i>
         <% end %>
       <% end %>
